<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#041A37"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    >
    <CheckBoxPreference
        android:key="@string/pref_download"
        android:title="Download data"
        android:summary="Download any data from a watch when connected"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="@string/pref_delete"
        android:title="Delete after sync"
        android:summary="Delete data from the watch after it is saved to file (will not delete if the sync fails to complete)"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="@string/pref_auto_sync"
        android:title="Enable auto sync"
        android:summary="Automatically download the data"
        android:defaultValue="false" />
    <com.lukehorvat.NumberPickerDialogPreference
        android:defaultValue="60"
        android:key="@string/pref_interval"
        android:dialogMessage="How often should the data be synced? (if auto sync is enabled)"
        android:max="10080"
        android:title="Auto sync interval (minutes)"
        custom:min="1" />
    <CheckBoxPreference
        android:key="@string/pref_boot"
        android:title="Enable start at boot"
        android:summary="Automatically start this app when the phone starts up"
        android:defaultValue="false" />
     <PreferenceCategory 
        android:title="Output settings"
        android:key="pref_key_output_settings">
	     <CheckBoxPreference
	        android:key="@string/pref_json"
	        android:title="Output as JSON file"
	        android:summary="Output log data in JSON format."
	        android:defaultValue="true" />
	     <CheckBoxPreference
	        android:key="@string/pref_csv"
	        android:title="Output as CSV file"
	        android:summary="Output log data in CSV (comma seperated value) format. (warning, this format takes a lot of space)"
	        android:defaultValue="false" />
	      <CheckBoxPreference
	        android:key="@string/pref_raw"
	        android:title="Output as raw hex file"
	        android:summary="Output log data in raw hex format. (useful for debugging)"
	        android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>